<resources>
    <string name="app_name">ShareIT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Password</string>
    <string name="inputName">Name</string>
    <string name="login">Login</string>
    <string name="dontHaveAccount">Don\'t have an account? Sign up!</string>
    <string name="signup">Sign up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="inputConfirmPassword">Confirm Password</string>
    <string name="chooseProfilePic">Profile Image</string>
    <string name="register">Register</string>
    <string name="choose_image">Choose image</string>
    <string name="warning">Warning</string>
    <string name="you_need_image">You need choose one image to your profile</string>
    <string name="invalid_name">Enter valid name</string>
    <string name="invalid_email">Enter valid email</string>
    <string name="invalid_password">Password must be 8 characters</string>
    <string name="diff_password">Passwords must be equals</string>
    <string name="error">Error</string>
    <string name="error_register">Could not possible register. Please, try again later.</string>
    <string name="welcome">Welcome</string>
    <string name="register_successfully">Registered successfully</string>
    <string name="feed_error">Error on load feed. Please, try again later.</string>
    <string name="invalid_login">Invalid username or password</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="message">Message</string>
    <string name="message_sent">Messagen sent</string>
    <string name="message_invalid">Please, write something</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="add_friend">Add Friend</string>
    <string name="friends">Friends</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="new_friend_notification"> ShareIT</string>
    <string name="new_friend_notification2">%s wants to be friends with you on ShareIT.</string>
</resources>
